Simplify string validation with isBlank()